@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Collections\AbstractListBackedBoundedList.cs" />
+    <Compile Include="Collections\BinarySparseArray.cs" />
     <Compile Include="Collections\BlockSparseArray.cs" />
     <Compile Include="Collections\CappedBoundedList.cs" />
     <Compile Include="Collections\BoundedListOverflowPolicy.cs" />
